# Labworks

ArgParser/lib/: ArgParser.cpp  ArgParser.h  Arguments.cpp  Arguments.h  CMakeLists.txt
ArgParser/tests/: argparser_test.cpp
CCirtucalBuffer/lib/: CCircularBuffer.cpp  CCircularBuffer.h  CCircularBufferExt.cpp  CCircularBufferExt.h  CMakeLists.txt
CCirtucalBuffer/tests/: CMakeLists.txt  testsCB.cpp  testsCBE.cpp
Parser mp3/lib/: CMakeLists.txt  frame.cpp  frame.h
Parser mp3/src/: CMakeLists.txt  main.cpp
Weather/lib/: CMakeLists.txt  Weather.cpp  Weather.h
Weather/src/: CMakeLists.txt  main.cpp
uint2022_t/lib/: number.cpp  number.h
Алгоритмы STL, xrange, zip/lib/: Algorithms_stl.cpp  Algorithms_stl.h  CMakeLists.txt  xrange.h  zip.cpp  zip.h
Алгоритмы STL, xrange, zip/tests/: CMakeLists.txt  all_of_tests.cpp  any_of_tests.cpp  find_backward_tests.cpp  find_not_tests.cpp  is_palindrome_tests.cpp  is_partitioned_tests.cpp  is_sorted_tests.cpp  none_of_tests.cpp  one_of_tests.cpp  xrange_tests.cpp  zip_tests.cpp
